[package]
name = "verkle_tree_cc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = {version = "^0.3.0"}
ark-ec = {version = "^0.3.0"}
ark-ff = {version = "^0.3.0"}
ark-poly = {version = "^0.3.0"}
ark-poly-commit = {version = "0.3.0"}
rand = {version = "0.8.0", features = ["getrandom"]}
rand_chacha = {version = "0.3.0", default-features = false}
